# bfthon

./: .gitignore  .htaccess  README.md  pyproject.toml  setup.py
.github/workflows/: static.yml
src/: __init__.py  bfthon.py
static/: error.css  error.html  error.js  index.css  index.html  index.js
